assets/css/main.css
/*  Generic styles
========================================================================== */

:root{
    --padding: 0 21%;
}

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: sans-serif;
    text-align: left;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

/*  Fade in animation
    ========================================================================== */

.fade_in{
    animation-name: fadeOut;
    animation-duration: 1s;
    opacity: 0;
}

.faded_in{
    animation-name: fadeIn;
    animation-duration: 2s;
}

@keyframes fadeIn {
    from {opacity: 0;}
    to {opacity: 1;}
}

@keyframes fadeOut {
    from {opacity: 1;}
    to {opacity: 0;}
}

/*  Header
    ========================================================================== */

header {
    background-image: url(../img/header_background.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 675px;
    padding: var(--padding);
    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
}

header div {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header div:nth-of-type(3) {
    justify-content: end;
}

header h1 {
    color: white;
    text-align: left;
    align-self: center;
    font-weight: 900;
}

/*  ==========================================================================
    Nav bars
    ========================================================================== */

    
nav{
    position: fixed;
}

/*  Popout menu
    ========================================================================== */


/* Background for popout menu */
#background_cover{
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: .8;
    position: fixed;
    display: none;
}

/* Popout menu shell */
#popout {
    display: none;
    width: 55%;
    top: 20%;
    height: 65%;
    left: 20%;
    background: #131313;
}

#popout a{
    color: white;
    text-decoration: none;
}

#popout h4{
    margin: 0;
    font-size: medium;
}

.fa-x{
    color: white;
}

#popout li {
    padding: 10px;
}

/* Inner popout menu 
========================================================================== */
#inner_popout{
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-template-rows: 1fr;
}

#inner_popout div:first-of-type{
    font-size: 50px;
}

#inner_popout div:first-of-type ul{
    margin-top: 25%;
    margin-left: 20%;
}

#inner_popout div:nth-child(2),
#inner_popout div:nth-child(3) {
    font-size: small;
    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
    align-items: flex-start;
}

#inner_popout>div:last-child>div:first-child {
    justify-self: end;
    margin: 20px;
}

#inner_popout div:last-child ul:last-child {
    justify-self: center;
}

/*  Menu button
========================================================================== */

button {
    border: none;
    background: transparent;
    height: 40px;
    width: 40px;
}

button:hover{
    cursor: pointer;
}

#popout button {
    position: absolute;
    right: 20px;
    top: 20px;
}

/*  Sidebar
    ========================================================================== */

#small_side {
    background: black;
    width: fit-content;
    border: 1px solid white;
    left: 0%;
    top: 60%;
    height: fit-content;
}

nav#small_side ul li {
    padding: 10px;
}

/*  General section styles
    ========================================================================== */

section:not(.divider){
    padding: var(--padding);
}

.background_colour {
    background-color: #f7f7f7;
}

.columns_text {
    height: 100%;
    width: 100%;
    padding: 15% 40px;
    line-height: 2;
}

.rightarrows{
    text-align: right;
}

.divider {
    text-align: center;
    padding:0;
}

/* Top section
   ========================================================================== */

#top_section {
    padding-top: 50px;
    text-align: center;
}

#top_section h1 { font-size: 30px; }

#top_section p {  font-size: 18px; }

/* Main section styling
   ========================================================================== */

#pure_marlborough,
#quality,
#wines,
#zero,
#climate {
    display: grid;
    align-items: start;
}

#pure_marlborough { grid-template-columns: 2fr 3fr; }

#climate { grid-template-columns: 2fr 4fr; }

#quality,
#zero { grid-template-columns: 4fr 2fr; }

#quality > div > img,
#pure_marlborough > div > img,
#climate > div > img,
#zero > div > img {
    height: 500px;
    width: 100%;
    object-fit: cover;
}

/*  Wine section
    ========================================================================== */

#wines{
    grid-template-columns: 3fr 2fr 2fr;
    padding: 50px 0;
    column-gap: 50px;
    justify-items: center;
}

#wines img{
    height: 200px;
}

#wines h2{
    grid-column: 1 / 4;
}

#wines{
    text-align: center;
}

/*  Collage
    ========================================================================== */

#collage,
#collage_inner {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2px;
}

#collage_inner img{
    height: 250px;
    width: 100%;
    object-fit: cover;
}

#collage_inner div:last-child{
    grid-column: 1/3;
}

#collage_inner div:last-child img{
    height: 400px;
}

/*  Footer
    ========================================================================== */

footer {
    padding: 30px 15%;
    background-color: black;
    color: white;
    display: grid;
    grid-template-columns: 1fr 1fr;
    font-weight:900;
}

footer a {
    color: white;
    text-decoration: none;
}

footer > div:first-child{
    display: grid;
    grid-template-rows: 1fr 1fr;
}


footer > div:first-child div:last-child{
    align-self: flex-end;
    font-size:x-small
}

footer > div:last-child{ text-align: right; }

footer > div:last-child li:nth-of-type(3) img{ height: 110px; }

footer > div:last-child li{ padding: 5px; }

/*  Mobile mode
    ========================================================================== */

@media (max-width:800px){
    #wines,
    #pure_marlborough,
    #quality,
    #climate,
    #zero,
    #inner_popout{
        grid-template-columns: 1fr;
    }

    #inner_popout div:nth-child(2),
    #inner_popout div:nth-child(3){
        font-size: smaller;
        grid-template-rows: 0fr 1fr 1fr;
    }

    #popout { height: 70%; }
        
    #inner_popout h4{ font-size: small; }

    #inner_popout div:first-of-type{ font-size: 25px; }

    #inner_popout div:last-child div:first-child{ margin: 0; }

    #inner_popout li{ padding: 2px; }

    section#wines h2{ grid-column: 1; }

    :root{ --padding: 0 0%; }
}
@media (max-height:1000px){
    #popout { 
        top: 10%;
        height: 90%; 
    }
}

